fix: improve readability of event details page

--- a/public/common/eventDetails.css
+++ b/public/common/eventDetails.css
@@ -13,6 +13,7 @@
 
 .event-controls {
     display: flex;
+    justify-content: flex-end;
     gap: var(--small-gap);
 }
 
@@ -24,7 +25,22 @@
 }
 
 #details-top-box {
+    display: flex;
     font-size: 1.5rem;
+}
+
+#details-box {
+    display: flex;
+    flex-direction: column;
+    gap: var(--small-gap);
+}
+
+#description {
+    margin-left: calc(var(--icon-size) + var(--small-gap));
+}
+
+#client-name {
+    font-size: 1.25rem;
 }
 
 .event-details {
@@ -34,12 +50,7 @@
     z-index: 10;
     padding: var(--container-padding);
     background-color: var(--card-bg);
-    gap: var(--small-gap);
-}
-
-#details-edit-button {
-    margin-left: auto; 
-    margin-right: 0;
+    gap: var(--medium-gap);
 }
 
 .choice-buttons {
@@ -53,17 +64,9 @@
     margin-right: 0;
 }
 
-#attendance-check-button {
-    width: fit-content;
-}
-
 .attendance-button-wrap {
     display: flex;
     justify-content: flex-end;
-}
-
-#attendance-check-button {
-    width: 100%
 }
 
 @media screen and (max-width: 800px) {
